--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_lagrange.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_lagrange.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     tools:context=".LagrangeActivity">
 
     <TextView
@@ -26,20 +25,15 @@
 
     <Button
         android:id="@+id/ingresoPunto"
-        android:layout_width="88dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
+        android:layout_width="91dp"
+        android:layout_height="43dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="16dp"
         android:onClick="ingresoPointLagrange"
         android:text="Append"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.154"
-        app:layout_constraintStart_toEndOf="@+id/points"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.494" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/ValueX"
@@ -52,6 +46,7 @@
         android:ems="10"
         android:hint="Value"
         android:inputType="textPersonName"
+        android:textColorHint="@color/ap_black"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +56,7 @@
         app:layout_constraintVertical_bias="0.865" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/CalculateN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,7 +79,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="116dp"
-        android:background="@color/ap_white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,20 +117,18 @@
         android:id="@+id/points"
         android:layout_width="154dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="500dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="Write a number"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
-        app:layout_constraintHorizontal_bias="0.08"
+        android:textColorHint="@color/ap_black"
+        app:layout_constraintEnd_toStartOf="@+id/ingresoPunto"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.959" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
@@ -171,6 +164,7 @@
         app:layout_constraintVertical_bias="0.869" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/ayudaIterpolation"
         android:layout_width="61dp"
         android:layout_height="40dp"
