--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
@@ -41,7 +40,6 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/ap_white"
             android:scrollbars="vertical"
             tools:context="com.androidplot.demos.matrix2">
 
@@ -156,6 +154,7 @@
             android:orientation="horizontal">
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -169,6 +168,7 @@
                 app:layout_constraintVertical_bias="0.243" />
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/Iterativos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -181,6 +181,7 @@
                 app:layout_constraintVertical_bias="0.909" />
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -194,6 +195,7 @@
                 app:layout_constraintVertical_bias="0.582" />
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/button7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -207,6 +209,7 @@
                 app:layout_constraintVertical_bias="0.656" />
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/button6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -220,6 +223,7 @@
                 app:layout_constraintVertical_bias="0.619" />
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -235,6 +239,7 @@
                 app:layout_constraintVertical_bias="0.243" />
 
             <Button
+                style="@android:style/Widget.DeviceDefault.Button.Toggle"
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -256,6 +261,7 @@
         android:layout_gravity="center|bottom">
 
         <Button
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:id="@+id/matrix_LU"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -268,6 +274,7 @@
             app:layout_constraintVertical_bias="0.774" />
 
         <Button
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:id="@+id/MatrixAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -280,6 +287,7 @@
             app:layout_constraintVertical_bias="0.774" />
 
         <Button
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:id="@+id/help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
