--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_newton.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_newton.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     tools:context="com.androidplot.demos.NewtonActivity">
 
     <TextView
@@ -18,7 +17,6 @@
         android:layout_marginTop="16dp"
         android:text="Newton Method"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +38,7 @@
         android:hint="Write a function"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.339"
@@ -56,6 +55,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +63,7 @@
         app:layout_constraintVertical_bias="0.012" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Calculo"
         android:layout_width="166dp"
         android:layout_height="47dp"
@@ -90,6 +91,7 @@
         android:hint="Iterations"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toTopOf="@+id/inferior"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.34"
@@ -108,6 +110,7 @@
         android:hint="X initial"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.339"
@@ -116,6 +119,7 @@
         app:layout_constraintVertical_bias="0.118" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/showTable"
         android:layout_width="166dp"
         android:layout_height="47dp"
@@ -141,6 +145,7 @@
         android:ems="10"
         android:hint="Tolerance"
         android:inputType="textPersonName"
+        android:textColorHint="@color/ap_black"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toTopOf="@+id/Iteraciones"
         app:layout_constraintEnd_toEndOf="parent"
@@ -159,6 +164,7 @@
         android:ems="10"
         android:hint="The derivative of the f(x)"
         android:inputType="textPersonName"
+        android:textColorHint="@color/ap_black"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -186,6 +192,7 @@
         app:layout_constraintVertical_bias="0.625" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Graficador"
         android:layout_width="78dp"
         android:layout_height="36dp"
@@ -200,6 +207,7 @@
         app:layout_constraintTop_toBottomOf="@+id/showTable" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/ayudaIncremental"
         android:layout_width="71dp"
         android:layout_height="0dp"
