--- a/elemental/Elemental/androidplot-core/src/main/res/values/colors.xml
+++ b/elemental/Elemental/androidplot-core/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="legacy_primary">#b9cedf</color>
     <color name="legacy_primary_dark">#4588cb</color>
-    <color name="accent_material_light">#4e84bd</color>
+    <color name="accent_material_light">#bcff4747</color>
     <color name="holo_blue_bright">#060607</color>
     <color name="dim_foreground_disabled_holo_light">#80cb3535</color>
+    <color name="holo_blue_light">#50b9e0</color>
 </resources>
