--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_busquedas_incrementales.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_busquedas_incrementales.xml
@@ -37,6 +37,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Write a function"
+        android:textColorHint="@color/ap_black"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toTopOf="@+id/Tolerancia"
@@ -54,6 +55,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -63,6 +65,7 @@
 
     <Button
         android:id="@+id/Calculo"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="166dp"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
@@ -89,6 +92,7 @@
         android:hint="X initial"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toTopOf="@+id/inferior"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
@@ -107,6 +111,7 @@
         android:hint="Delta"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toTopOf="@+id/superior"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
@@ -125,6 +130,7 @@
         android:hint="Iteractions"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.294"
@@ -134,6 +140,7 @@
 
     <Button
         android:id="@+id/showTable"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="166dp"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
@@ -149,6 +156,7 @@
 
     <Button
         android:id="@+id/Graficador"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginBottom="8dp"
@@ -165,6 +173,7 @@
 
     <Button
         android:id="@+id/ayudaIncremental"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="71dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
