--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_cuadratico.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_cuadratico.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     tools:context=".CuadraticoActivity">
     <TextView
         android:id="@+id/textView3"
@@ -26,6 +25,7 @@
 
     <Button
         android:id="@+id/ingresoPunto"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -43,6 +43,7 @@
 
     <Button
         android:id="@+id/CalculateN"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -66,7 +67,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="116dp"
-        android:background="@color/ap_white"
+
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,6 +110,7 @@
         android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="Write a number"
+        android:textColorHint="@color/ap_black"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -159,7 +161,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Quadratic Spline"
-        android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -169,6 +170,7 @@
 
     <Button
         android:id="@+id/ayudaIterpolation"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="61dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
