--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_cubico.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_cubico.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/ap_white"
     android:layout_height="match_parent"
     tools:context=".CubicoActivity">
 
@@ -27,6 +26,7 @@
 
     <Button
         android:id="@+id/ingresoPunto"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -44,6 +44,7 @@
 
     <Button
         android:id="@+id/CalculateN"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -67,7 +68,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="116dp"
-        android:background="@color/ap_white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,6 +114,7 @@
         android:hint="Write a number"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView7"
         app:layout_constraintHorizontal_bias="0.075"
@@ -155,15 +156,14 @@
         app:layout_constraintVertical_bias="0.857" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="157dp"
+        android:layout_height="44dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Cubic Spline"
-        android:textColor="@color/ap_black"
-        android:textSize="25dp"
+        android:textSize="28dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -172,6 +172,7 @@
 
     <Button
         android:id="@+id/ayudaIterpolation"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="61dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
