--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_iterativos.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_iterativos.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     xmlns:tools="http://schemas.android.com/tools">
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -12,7 +11,6 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/ap_white"
             android:scrollbars="vertical"
             tools:context="com.androidplot.demos.Iterativos">
             <LinearLayout
@@ -134,6 +132,7 @@
 
         <Button
             android:id="@+id/button12"
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="GaussSeidelSor"
@@ -147,6 +146,7 @@
 
         <Button
             android:id="@+id/button11"
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -163,6 +163,7 @@
 
         <Button
             android:id="@+id/button10"
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="47dp"
             android:onClick="GaussSeidel"
@@ -176,6 +177,7 @@
 
         <Button
             android:id="@+id/button9"
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:layout_width="160dp"
             android:layout_height="49dp"
             android:onClick="Jacobbi"
@@ -198,6 +200,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="W"
+            android:textColorHint="@color/ap_black"
             android:inputType="textPersonName"
             android:textColor="@color/ap_black"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -220,6 +223,7 @@
             android:hint="Iterations"
             android:inputType="textPersonName"
             android:textColor="@color/ap_black"
+            android:textColorHint="@color/ap_black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.555"
@@ -239,6 +243,7 @@
             android:hint="Tolerance"
             android:inputType="textPersonName"
             android:textColor="@color/ap_black"
+            android:textColorHint="@color/ap_black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.03"
@@ -255,6 +260,7 @@
 
         <Button
             android:id="@+id/Tablas"
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TABLES"
@@ -264,8 +270,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.777" />
+
         <Button
             android:id="@+id/help"
+            style="@android:style/Widget.DeviceDefault.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="ShowPopup"
