--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_newton_dividido2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_newton_dividido2.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     tools:context=".NewtonDividido2Activity">
 
     <TextView
@@ -36,6 +35,7 @@
         android:ems="10"
         android:hint="Value"
         android:inputType="textPersonName"
+        android:textColorHint="@color/ap_black"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toTopOf="@+id/CalculateN"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="116dp"
-        android:background="@color/ap_white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,6 +93,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:onClick="CalculateNewton"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:text="Calculate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +106,7 @@
         android:layout_width="138dp"
         android:layout_height="43dp"
         android:layout_marginEnd="16dp"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_marginTop="20dp"
         android:onClick="ingresoPoint"
         android:text="Append"
@@ -115,6 +116,7 @@
     <EditText
         android:id="@+id/Points"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         android:layout_width="181dp"
         android:layout_height="42dp"
         android:layout_marginEnd="8dp"
@@ -170,6 +172,7 @@
         android:layout_marginTop="8dp"
         android:onClick="ShowPopupNewton"
         android:text="Help"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         app:layout_constraintBottom_toTopOf="@+id/ingresoPunto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.71"
