--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_secant_method.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_secant_method.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     tools:context="com.androidplot.demos.SecantMethodActivity">
 
     <TextView
@@ -18,7 +17,6 @@
         android:layout_marginTop="16dp"
         android:text="Secant Method"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,6 +27,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
+        android:textColorHint="@color/ap_black"
         android:id="@+id/funcion"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
@@ -64,6 +63,7 @@
         app:layout_constraintVertical_bias="0.061" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Calculo"
         android:layout_width="203dp"
         android:layout_height="41dp"
@@ -75,11 +75,13 @@
         android:text="Calculate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Tolerancia"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.051" />
 
     <EditText
+        android:textColorHint="@color/ap_black"
         android:id="@+id/Iteraciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -101,7 +103,7 @@
     <EditText
         android:id="@+id/X0"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -110,6 +112,7 @@
         android:hint="X0"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -118,6 +121,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/showTable"
         android:layout_width="166dp"
         android:layout_height="41dp"
@@ -133,6 +137,7 @@
         app:layout_constraintVertical_bias="0.777" />
 
     <EditText
+        android:textColorHint="@color/ap_black"
         android:id="@+id/Tolerancia"
         android:layout_width="150dp"
         android:layout_height="38dp"
@@ -152,6 +157,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
+        android:textColorHint="@color/ap_black"
         android:id="@+id/X1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -171,6 +177,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/muller"
         android:layout_width="203dp"
         android:layout_height="41dp"
@@ -218,6 +225,7 @@
         app:layout_constraintTop_toBottomOf="@+id/X1" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Graficador"
         android:layout_width="74dp"
         android:layout_height="41dp"
@@ -233,6 +241,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ResultMuller" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/ayudaIncremental"
         android:layout_width="69dp"
         android:layout_height="46dp"
