--- a/elemental/Elemental/demoapp/src/main/res/layout/main.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/main.xml
@@ -5,28 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ap_white"
     tools:context="com.androidplot.demos.MainActivity">
-
-    <!--
-  ~ Copyright 2015 AndroidPlot.com
-  ~
-  ~    Licensed under the Apache License, Version 2.0 (the "License");
-  ~    you may not use this file except in compliance with the License.
-  ~    You may obtain a copy of the License at
-  ~
-  ~        http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~    Unless required by applicable law or agreed to in writing, software
-  ~    distributed under the License is distributed on an "AS IS" BASIS,
-  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~    See the License for the specific language governing permissions and
-  ~    limitations under the License.
-  -->
 
 
     <Button
         android:id="@+id/metodo1"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="66dp"
         android:layout_marginBottom="8dp"
@@ -34,22 +18,24 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:text="Single variable equations"
+        android:textSize="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.074" />
 
     <Button
         android:id="@+id/fxPlotExample"
-        style="@style/FullScreenGraph.Minimalist"
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:layout_width="222dp"
         android:layout_height="45dp"
         android:layout_marginBottom="143dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:baselineAligned="false"
+        android:textSize="19dp"
         android:text="Graph a function"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Interpolacion"
         android:layout_width="226dp"
         android:layout_height="51dp"
@@ -64,6 +51,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:textSize="19dp"
         android:text="Interpolation"
         app:layout_constraintBottom_toTopOf="@+id/fxPlotExample"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +60,7 @@
         app:layout_constraintVertical_bias="0.511" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/button2"
         android:layout_width="221dp"
         android:layout_height="55dp"
@@ -79,6 +68,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
+        android:textSize="19dp"
         android:text="       Linear equation       "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +87,7 @@
         android:layout_marginTop="8dp"
         android:text="Elemental"
         android:textColor="@color/ap_black"
-        android:textSize="50dp"
+        android:textSize="60dp"
         android:textStyle="italic"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/fxPlotExample"
