--- a/elemental/Elemental/demoapp/src/main/res/layout/metodobiseccion.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/metodobiseccion.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="250dp"
-    android:background="@color/ap_white"
     tools:context="com.androidplot.demos.metodobiseccionActivity">
 
     <TextView
@@ -40,6 +39,7 @@
         android:hint="Write a function"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
+        android:textColorHint="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -64,6 +64,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Calculo"
         android:layout_width="221dp"
         android:layout_height="46dp"
@@ -89,6 +90,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Tolerance"
+        android:textColorHint="@color/ap_black"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +110,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Lower bound"
+        android:textColorHint="@color/ap_black"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -127,6 +130,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Upper bound"
+        android:textColorHint="@color/ap_black"
         android:inputType="textPersonName"
         android:textColor="@color/ap_black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -137,6 +141,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/showTable"
         android:layout_width="221dp"
         android:layout_height="46dp"
@@ -153,6 +158,7 @@
         app:layout_constraintVertical_bias="0.95" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Aitken"
         android:layout_width="221dp"
         android:layout_height="46dp"
@@ -186,6 +192,7 @@
         app:layout_constraintVertical_bias="0.102" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/Graficador"
         android:layout_width="81dp"
         android:layout_height="46dp"
@@ -202,6 +209,7 @@
         app:layout_constraintVertical_bias="0.764" />
 
     <Button
+        style="@android:style/Widget.DeviceDefault.Button.Toggle"
         android:id="@+id/ayudaBiseccion"
         android:layout_width="68dp"
         android:layout_height="40dp"
